--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.19.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^8.4.0",
