--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-date-range": "^2.0.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
