feat: Enhance booking system with email notifications and payment integration
- Added booking cancellation feature with email notifications to users.
- Implemented Razorpay payment gateway for booking payments.
- Created a payment model to store payment details.
- Added a reminder job to send booking reminders via email.
- Updated booking routes to handle payment verification and email confirmations.
- Enhanced UI components for better user experience in booking and admin views.
- Improved date handling and availability checks for vehicle bookings.
- Added sorting and filtering options in vehicle listing.
- Updated CSS styles for better visual consistency across the application.

--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
+    "node-cron": "^4.2.0",
+    "nodemailer": "^7.0.4",
     "razorpay": "^2.9.6"
   },
   "devDependencies": {
