--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.19.2",
+    "html2pdf.js": "^0.10.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
