--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.19.2",
+    "framer-motion": "^12.23.0",
     "html2pdf.js": "^0.10.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
@@ -22,7 +22,8 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
