--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
+    "react-calendar": "^6.0.0",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
