--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
+    "react-to-print": "^3.1.1",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.10"
   },
