--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "multer": "^2.0.1",
     "node-cron": "^4.2.0",
     "nodemailer": "^7.0.4",
+    "pdfkit": "^0.17.1",
     "razorpay": "^2.9.6"
   },
   "devDependencies": {
